--- a/flutter/nm_app/web/index.html
+++ b/flutter/nm_app/web/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <!--
+    This file was generated (just once) to help get started.
+
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
